# qt-vscode-vcpkg

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
